--- a/app/src/main/res/values-it/strings_state.xml
+++ b/app/src/main/res/values-it/strings_state.xml
@@ -66,8 +66,8 @@
     <string name="progress">Progresso:</string>
     <string name="progress_label_time">Previsto</string>
     <string name="progress_label_gcode">Vero</string>
-    <string name="progress_label_time_percent">Previsto (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">Vero (%.1f%%)</string>
+    <string name="progress_label_time_percent"><![CDATA[Previsto [<b>%.1f%%</b>]]]></string>
+    <string name="progress_label_gcode_percent"><![CDATA[Vero [<b>%.1f%%</b>]]]></string>
 
     <string name="printing_completed_success_title">La stampa è terminata</string>
     <string name="printing_completed_success_message">La stampa si è conclusa con successo!</string>
