--- a/app/src/main/res/values-de/strings_state.xml
+++ b/app/src/main/res/values-de/strings_state.xml
@@ -66,8 +66,8 @@
     <string name="progress">Fortschritt:</string>
     <string name="progress_label_time">Erwartet</string>
     <string name="progress_label_gcode">Echt</string>
-    <string name="progress_label_time_percent">Erwartet (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">Echt (%.1f%%)</string>
+    <string name="progress_label_time_percent"><![CDATA[Erwartet [<b>%.1f%%</b>]]]></string>
+    <string name="progress_label_gcode_percent"><![CDATA[Echt [<b>%.1f%%</b>]]]></string>
 
     <string name="printing_completed_success_title">Druck beendet</string>
     <string name="printing_completed_success_message">Der Druck endete mit Erfolg!</string>
