--- a/app/src/main/res/values-nl/strings_state.xml
+++ b/app/src/main/res/values-nl/strings_state.xml
@@ -66,8 +66,8 @@
     <string name="progress">Voortgang:</string>
     <string name="progress_label_time">Schatting</string>
     <string name="progress_label_gcode">Echt</string>
-    <string name="progress_label_time_percent">Schatting (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">Echt (%.1f%%)</string>
+    <string name="progress_label_time_percent"><![CDATA[Schatting [<b>%.1f%%</b>]]]></string>
+    <string name="progress_label_gcode_percent"><![CDATA[Echt [<b>%.1f%%</b>]]]></string>
 
     <string name="printing_completed_success_title">Afdrukken is beëindigd</string>
     <string name="printing_completed_success_message">Afdrukken eindigde met succes!</string>
