--- a/app/src/main/res/values/strings_hub.xml
+++ b/app/src/main/res/values/strings_hub.xml
@@ -5,6 +5,8 @@
 
     <string name="hub_settings">Settings</string>
 
+    <string name="hub_introduction">Printoid Hub is a PREMIUM feature, which allows you to show the status of all your 3D printers at the same time, within the same screen!\n
+        A new icon to start this feature has been added to your applications list. You can hide it from the settings of Printoid Hub.</string>
     <string name="hub_start_description">The status of all your 3D printers on the same screen!</string>
 
     <string name="hub_no_managed_profiles">Add one of your OctoPrint profiles or more in this board to see their status!</string>
