--- a/app/src/main/res/values-es/strings_hub.xml
+++ b/app/src/main/res/values-es/strings_hub.xml
@@ -11,6 +11,10 @@
     <string name="hub_no_managed_profiles">¡Agregue uno de sus perfiles OctoPrint o más en este tablero para ver su estado!</string>
     <string name="hub_profile_already_managed">Su perfil OctoPrint \'%s\' ya está disponible en Printoid Hub</string>
 
+    <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
+        Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
+        Not all information are currently shown in this screen, but don\'t worry, it will come in the next versions of the app!</string>
+
     <string name="hub_connecting_to_server">Conectando a OctoPrint…</string>
     <string name="hub_loading_profile_state">Cargando el estado de OctoPrint…</string>
 
