--- a/app/src/main/res/values-pt/strings_hub.xml
+++ b/app/src/main/res/values-pt/strings_hub.xml
@@ -11,6 +11,10 @@
     <string name="hub_no_managed_profiles">Adicione um dos seus perfis OctoPrint ou mais neste quadro para ver seu status!</string>
     <string name="hub_profile_already_managed">Seu perfil OctoPrint \'%s\' já está disponível no Prentaid Hub</string>
 
+    <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
+        Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
+        Not all information are currently shown in this screen, but don\'t worry, it will come in the next versions of the app!</string>
+
     <string name="hub_connecting_to_server">Conectando-se ao OctoPrint…</string>
     <string name="hub_loading_profile_state">Carregando o status do OctoPrint…</string>
 
