--- a/app/src/main/res/values-de/strings_hub.xml
+++ b/app/src/main/res/values-de/strings_hub.xml
@@ -11,9 +11,9 @@
     <string name="hub_no_managed_profiles">Fügen Sie eines oder mehrere OctoPrint-Profile in dieses Board ein, um deren Status anzuzeigen!</string>
     <string name="hub_profile_already_managed">Ihr OctoPrint-Profil \'%s\' ist bereits in Printoid Hub verfügbar</string>
 
-    <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
-        Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
-        Not all information are currently shown in this screen, but don\'t worry, it will come in the next versions of the app!</string>
+    <string name="hub_onboarding_message">Willkommen in Printoid Hub!\n\nDiese Premium-Funktion zeigt Ihnen gleichzeitig den Status aller konfigurierten OctoPrint-Server auf demselben Bildschirm an!\n\n
+         Bitte beachten Sie, dass der Entwickler noch an dieser Funktion arbeitet und diese in zukünftigen Versionen schrittweise verbessert wird.\n\n
+         Auf diesem Bildschirm werden zurzeit nicht alle Informationen angezeigt (z. B. die Kamera). Machen Sie sich jedoch keine Sorgen, sie werden in den nächsten Versionen der App veröffentlicht!</string>
 
     <string name="hub_connecting_to_server">Verbindung zu OctoPrint…</string>
     <string name="hub_loading_profile_state">OctoPrint-Status wird geladen…</string>
