--- a/app/src/main/res/values-fr/strings_hub.xml
+++ b/app/src/main/res/values-fr/strings_hub.xml
@@ -11,9 +11,9 @@
     <string name="hub_no_managed_profiles">Ajoutez l’un de vos profils OctoPrint ou plus dans ce forum pour connaître son statut!</string>
     <string name="hub_profile_already_managed">Votre profil OctoPrint \'%s\' est déjà disponible dans Printoid Hub</string>
 
-    <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
-        Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
-        Not all information are currently shown in this screen, but don\'t worry, it will come in the next versions of the app!</string>
+    <string name="hub_onboarding_message">Bienvenue dans Printoid Hub!\n\nCette fonctionnalité Premium affiche l\'état de tous vos serveurs OctoPrint configurés sur le même écran, en même temps !\n\n
+        Veuillez noter que le développeur de Printoid travaille toujours sur cette fonctionnalité, celle-ci sera ainsi améliorée étape par étape dans les prochaines versions.\n\n
+        Toutes les informations ne sont pas actuellement affichées (comme par exemple la caméra), mais ne vous inquiétez pas, elles arriveront dans les prochaines versions de Printoid !</string>
 
     <string name="hub_connecting_to_server">Connexion à OctoPrint…</string>
     <string name="hub_loading_profile_state">Chargement du statut OctoPrint…</string>
