--- a/app/src/main/res/values-it/strings_hub.xml
+++ b/app/src/main/res/values-it/strings_hub.xml
@@ -11,9 +11,9 @@
     <string name="hub_no_managed_profiles">Aggiungi uno dei tuoi profili OctoPrint o più in questo forum per vedere il loro stato!</string>
     <string name="hub_profile_already_managed">Il tuo profilo OctoPrint \'%s\' è già disponibile in Printoid Hub</string>
 
-    <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
-        Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
-        Not all information are currently shown in this screen, but don\'t worry, it will come in the next versions of the app!</string>
+    <string name="hub_onboarding_message">Benvenuto nell\'hub Printoid!\n\nQuesta funzione Premium ti mostra lo stato di tutti i server OctoPrint configurati nella stessa schermata, allo stesso tempo!\n\n
+         Tieni presente che lo sviluppatore sta ancora lavorando su questa funzione e verrà migliorata passo a passo nelle versioni future.\n\n
+         Non tutte le informazioni sono attualmente visualizzate in questa schermata (come la fotocamera), ma non ti preoccupare, arriverà nelle prossime versioni dell\'app!</string>
 
     <string name="hub_connecting_to_server">Connessione a OctoPrint…</string>
     <string name="hub_loading_profile_state">Caricamento dello stato di OctoPrint…</string>
