--- a/app/src/main/res/values/strings_hub.xml
+++ b/app/src/main/res/values/strings_hub.xml
@@ -12,7 +12,7 @@
 
     <string name="hub_onboarding_message">Welcome in Printoid Hub!\n\nThis Premium feature shows you the status of all your configured OctoPrint servers within the same screen, at the same time!\n\n
         Please note that the developer is still working on this feature, and it will be enhanced step by step in the future releases.\n\n
-        Not all information are currently shown in this screen, but don\'t worry, it will come in the next versions of the app!</string>
+        Not all information are currently displayed in this screen (such as the camera), but don\'t worry, it will come in the next versions of the app!</string>
 
     <string name="hub_no_managed_profiles">Add one of your OctoPrint profiles or more in this board to see their status!</string>
     <string name="hub_profile_already_managed">Your OctoPrint profile \'%s\' is already available in Printoid Hub</string>
