--- a/app/src/main/res/values-de/strings_menu.xml
+++ b/app/src/main/res/values-de/strings_menu.xml
@@ -38,6 +38,6 @@
     <string name="menu_lite_text_promote">Entfernen Sie Anzeigen und genießen Sie PRO und PREMIUM mit allen Funktionen!</string>
 
     <string name="menu_profiles_create">Fügen Sie ein Profil</string>
-    <string name="menu_profiles_edit">Fügen Sie ein Profil</string>
+    <string name="menu_profiles_edit">Verwalten Sie die Profile</string>
 
 </resources>
