--- a/app/src/main/res/values/strings_settings.xml
+++ b/app/src/main/res/values/strings_settings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="settings_printer_profile"><![CDATA[Settings for <b>%s</b>]]></string>
-    <string name="settings_printer_profile_msg">All the following settings are relative to the current OctoPrint profile</string>
-    <string name="settings_printer_profile_with_version_msg">All the following settings are relative to the current OctoPrint profile (Printoid %1$s v%2$s)</string>
+    <string name="settings_printer_profile" translatable="false">@string/menu_app_settings</string>
+    <string name="settings_printer_profile_with_version_msg" translatable="false">Printoid %1$s v%2$s</string>
 
     <string name="setting_title_general">General settings</string>
     <string name="setting_title_communication">Communication settings</string>
