--- a/app/src/main/res/values-ru/strings_menu.xml
+++ b/app/src/main/res/values-ru/strings_menu.xml
@@ -33,6 +33,7 @@
     <string name="menu_tos">Условия обслуживания</string>
     <string name="menu_printer_tools">Инструменты принтера</string>
     <string name="menu_gcode_scripts">Gcode скрипты</string>
+    <string name="menu_profile_settings">Параметры сервера</string>
 
     <string name="menu_lite_label_promote">Вам нравится Printoid Lite?</string>
     <string name="menu_lite_text_promote">Удалите рекламу и наслаждайтесь полнофункциональной версией PRO и PREMIUM!</string>
