--- a/app/src/main/res/values-fr/strings_cmds.xml
+++ b/app/src/main/res/values-fr/strings_cmds.xml
@@ -14,7 +14,7 @@
     <string name="add_command_command_title">Commande à exécuter</string>
     <string name="add_command_icon">Icône</string>
     <string name="add_command_content">Arguments de la commande</string>
-    <string name="add_command_favorite">Marquer comme favorie</string>
+    <string name="add_command_favorite">Marquer comme favorite</string>
     <string name="add_command_argument">Arguments</string>
     <string name="add_command_color">Couleur d\'icône</string>
     <string name="add_command_show_on_home">Afficher sur l\'écran principal</string>
@@ -81,12 +81,12 @@
     <string name="commands_empty_msg">Il n\'existe aucune commande système pour ce profil. Vous pouvez en configurer de nouvelles dans le fichier config.yaml d\'OctoPrint.</string>
 
     <string name="commands_config_menu_title">Configuration</string>
-    <string name="commands_show_only_favorites">Afficher seulement favories</string>
+    <string name="commands_show_only_favorites">Afficher seulement favorites</string>
     <string name="commands_show_temperatures">Afficher commandes température</string>
     <string name="commands_filter_temperatures">Filtrer commandes température</string>
     <string name="commands_filter_temperatures_on">Filtrer commandes température ON</string>
     <string name="commands_filter_temperatures_off">Filtrer commandes température OFF</string>
-    <string name="commands_show_only_favorites_on">Afficher seulement les commandes favories</string>
+    <string name="commands_show_only_favorites_on">Afficher seulement les commandes favorites</string>
     <string name="commands_show_only_favorites_off">Afficher toutes les commandes</string>
 
 </resources>
