--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -40,6 +40,7 @@
     <string name="menu_tos">Terms of service</string>
     <string name="menu_printer_tools">Printer tools</string>
     <string name="menu_gcode_scripts">Gcode scripts</string>
+    <string name="menu_debug" translatable="false">Printoid Debug Bridge</string>
 
     <string name="menu_lite_label_promote">Do you like Printoid Lite?</string>
     <string name="menu_lite_text_promote">Support the developer and enjoy the PRO or PREMIUM full-featured version!</string>
